# Clock

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
src/: 0000.txt  actions.rs  main.rs  read.rs  test.txt  time.rs
src/modules/: actions.rs  app.rs  history.rs  mod.rs  read.rs  time.rs
