[package]
name = "Clock"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"] }
druid = "0.8.0"  # 添加 druid 依赖项

walkdir = "2.4"
chrono = { version = "0.4.31", features = ["serde", "alloc"] }

[build-dependencies]

embed-resource = "1.7.2"